# mockall-and-ddd

./: README.md
app/: cargo.toml
app/application/: Cargo.toml
app/application/src/: lib.rs  use_case.rs
app/application/tests/: test_use_case_search_users.rs
app/domain/: Cargo.toml
app/domain/src/: email_address.rs  lib.rs  repositories.rs
app/domain/src/error/: error_type.rs  mod.rs
app/domain/src/user/: mod.rs  user_id.rs  user_repository.rs
app/domain/src/user/user_name/: mod.rs  user_first_name.rs  user_last_name.rs  user_repository.rs
